--- a/.github/workflows/CiNode.yml
+++ b/.github/workflows/CiNode.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [v12.x, 14.x, 16.x, 18.x]
+        node-version: [v12.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
